WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229063
[GTK][WPE] Test fast/mediastream/mediastreamtrack-video-clone.html is flaky timeout since
r280775
https://bugs.webkit.org/show_bug.cgi?id=229063
Summary
[GTK][WPE] Test fast/mediastream/mediastreamtrack-video-clone.html is flaky t...
Carlos Alberto Lopez Perez
Reported
2021-08-12 18:19:27 PDT
Since
r280775
the test fast/mediastream/mediastreamtrack-video-clone.html is a flaky timeout. It time-outs much more often the GTK bots (>90% of the times) than on the WPE ones (<5% of the times)
Attachments
Patch
(3.81 KB, patch)
2021-08-16 07:01 PDT
,
Philippe Normand
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2021-08-12 18:28:57 PDT
Expectations updated on
r281002
Philippe Normand
Comment 2
2021-08-16 07:01:19 PDT
Created
attachment 435595
[details]
Patch
EWS
Comment 3
2021-08-16 08:57:11 PDT
Committed
r281083
(
240543@main
): <
https://commits.webkit.org/240543@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435595
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug