[GTK][WPE] Test fast/mediastream/mediastreamtrack-video-clone.html is flaky timeout since r280775 https://bugs.webkit.org/show_bug.cgi?id=229063

Patch by Philippe Normand <pnormand@igalia.com> on 2021-08-16
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Ignore redundant stream collections also in the mediastream case. Both the mediastream and
MSE source elements behave similarly regarding stream collections.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleStreamCollectionMessage):

LayoutTests:

* platform/glib/TestExpectations:

Canonical link: https://commits.webkit.org/240543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281083 268f45cc-cd09-0410-ab3c-d52691b4dbfc